revision 30 - 20100701                                              |
    * Major changes in console, HTML and vbCode output              |
    * Fixed Start button delay                                      |


revision 29 - 20100630                                              |
    * Reverted to r24                                               |
    * Always check for updated target list first                    |
    * QSpeedTest: Clicking Stop during domestic download speed test |
      did not cancel international speed test as well. Fixed        |
    * QSpeedTest: OS detection done when initializing program. This |
      trades a little time during program startup for faster        |
      printing of host information every time a test run starts     |
    * QSpeedTest: More responsive GUI during download speed tests   |
    * QSpeedTestCLI: A small cosmetic fix in stdout output          |
    * QSpeedTestCLI: CTRL+C now properly stops the program          |


revision 28 - 20100630                                              |
    * QSpeedTestCLI: Previous fix was not submitted properly        |


revision 27 - 20100630                                              |
    * Bumped QSpeedTest revision to r27                             |
    * Bumped QSpeedTestCLI revision to r6                           |
    * QSpeedTest r27: Fixed a nasty bug that crashed the program    |
      when pressing for the 2nd time the stop button during a       |
      download speed test                                           |
    * QSpeedTestCLI r6: A small cosmetic fix in stdout output       |


revision 26 - 20100630                                              |
    * Bumped QSpeedTest revision to r26                             |
    * Bumped QSpeedTestCLI revision to r5                           |
    * QSpeedTest r26: Fixed a small stop button bug                 |


revision 25 - 20100630                                              |