@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>750</width>
+    <width>760</width>
     <height>520</height>
    </rect>
   </property>
@@ -15,9 +15,6 @@
   </property>
   <widget class="QWidget" name="centralWidget">
    <layout class="QGridLayout" name="gridLayout">
-    <property name="bottomMargin">
-     <number>1</number>
-    </property>
     <item row="0" column="0">
      <widget class="QLabel" name="labelLogMessages">
       <property name="text">
@@ -25,169 +22,156 @@
       </property>
      </widget>
     </item>
-    <item row="0" column="1">
-     <layout class="QHBoxLayout" name="horizontalLayout_5">
-      <property name="leftMargin">
-       <number>0</number>
+    <item row="0" column="1" colspan="2">
+     <spacer name="horizontalSpacer">
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
       </property>
+      <property name="sizeHint" stdset="0">
+       <size>
+        <width>178</width>
+        <height>20</height>
+       </size>
+      </property>
+     </spacer>
+    </item>
+    <item row="0" column="3" colspan="2">
+     <layout class="QHBoxLayout" name="horizontalLayout_6">
       <item>
-       <widget class="QLabel" name="labelTestMode">
-        <property name="toolTip">
-         <string>Select the desired combination of tests
-that QSpeedTest will run.</string>
+       <layout class="QHBoxLayout" name="horizontalLayout_5">
+        <property name="leftMargin">
+         <number>0</number>
         </property>
-        <property name="text">
-         <string>Test mode</string>
-        </property>
-        <property name="alignment">
-         <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-        </property>
-       </widget>
+        <item>
+         <widget class="QLabel" name="labelTestMode">
+          <property name="text">
+           <string>Test mode</string>
+          </property>
+          <property name="alignment">
+           <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QComboBox" name="comboBoxTestMode">
+          <item>
+           <property name="text">
+            <string>Ping and speed</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>Ping only</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>Speed only</string>
+           </property>
+          </item>
+         </widget>
+        </item>
+       </layout>
       </item>
       <item>
-       <widget class="QComboBox" name="comboBoxTestMode">
-        <property name="toolTip">
-         <string>Select the desired combination of tests
-that QSpeedTest will run.</string>
+       <layout class="QHBoxLayout" name="horizontalLayout_3">
+        <property name="leftMargin">
+         <number>15</number>
+        </property>
+        <property name="rightMargin">
+         <number>0</number>
         </property>
         <item>
-         <property name="text">
-          <string>Ping and download</string>
-         </property>
+         <widget class="QLabel" name="labelPingsPerTarget">
+          <property name="text">
+           <string>Pings per target</string>
+          </property>
+          <property name="alignment">
+           <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+          </property>
+         </widget>
         </item>
         <item>
-         <property name="text">
-          <string>Ping only</string>
-         </property>
+         <widget class="QSpinBox" name="spinBoxPingsPerTarget">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="maximumSize">
+           <size>
+            <width>60</width>
+            <height>16777215</height>
+           </size>
+          </property>
+          <property name="alignment">
+           <set>Qt::AlignCenter</set>
+          </property>
+          <property name="readOnly">
+           <bool>false</bool>
+          </property>
+          <property name="keyboardTracking">
+           <bool>false</bool>
+          </property>
+          <property name="minimum">
+           <number>1</number>
+          </property>
+          <property name="maximum">
+           <number>999</number>
+          </property>
+          <property name="value">
+           <number>4</number>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </item>
+      <item>
+       <layout class="QHBoxLayout" name="horizontalLayout_2">
+        <property name="spacing">
+         <number>6</number>
+        </property>
+        <property name="leftMargin">
+         <number>0</number>
+        </property>
+        <property name="rightMargin">
+         <number>0</number>
+        </property>
+        <item>
+         <widget class="QLabel" name="labelParallelThreads">
+          <property name="text">
+           <string>Parallel ping threads</string>
+          </property>
+          <property name="alignment">
+           <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+          </property>
+         </widget>
         </item>
         <item>
-         <property name="text">
-          <string>Download only</string>
-         </property>
+         <widget class="QSpinBox" name="spinBoxParallelThreads">
+          <property name="maximumSize">
+           <size>
+            <width>60</width>
+            <height>16777215</height>
+           </size>
+          </property>
+          <property name="minimum">
+           <number>1</number>
+          </property>
+          <property name="maximum">
+           <number>8</number>
+          </property>
+          <property name="value">
+           <number>4</number>
+          </property>
+         </widget>
         </item>
-       </widget>
+       </layout>
       </item>
      </layout>
     </item>
-    <item row="0" column="2">
-     <layout class="QHBoxLayout" name="horizontalLayout_3">
-      <property name="leftMargin">
-       <number>15</number>
-      </property>
-      <property name="rightMargin">
-       <number>0</number>
-      </property>
-      <item>
-       <widget class="QLabel" name="labelPingsPerTarget">
-        <property name="toolTip">
-         <string>Select how many times QSpeedTest will &quot;ping&quot; each target host.
-
-Please note that, while a bigger value will provide more
-accurate results, it will also mean increased times for test
-completion.</string>
-        </property>
-        <property name="text">
-         <string>Pings per target</string>
-        </property>
-        <property name="alignment">
-         <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QSpinBox" name="spinBoxPingsPerTarget">
-        <property name="sizePolicy">
-         <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
-          <horstretch>0</horstretch>
-          <verstretch>0</verstretch>
-         </sizepolicy>
-        </property>
-        <property name="focusPolicy">
-         <enum>Qt::WheelFocus</enum>
-        </property>
-        <property name="contextMenuPolicy">
-         <enum>Qt::NoContextMenu</enum>
-        </property>
-        <property name="toolTip">
-         <string>Select how many times QSpeedTest will &quot;ping&quot; each target host.
-
-Please note that, while a bigger value will provide more
-accurate results, it will also mean increased times for test
-completion.</string>
-        </property>
-        <property name="alignment">
-         <set>Qt::AlignCenter</set>
-        </property>
-        <property name="readOnly">
-         <bool>false</bool>
-        </property>
-        <property name="keyboardTracking">
-         <bool>false</bool>
-        </property>
-        <property name="minimum">
-         <number>1</number>
-        </property>
-        <property name="maximum">
-         <number>999</number>
-        </property>
-        <property name="value">
-         <number>4</number>
-        </property>
-       </widget>
-      </item>
-     </layout>
-    </item>
-    <item row="0" column="3">
-     <layout class="QHBoxLayout" name="horizontalLayout_2">
-      <property name="spacing">
-       <number>6</number>
-      </property>
-      <property name="leftMargin">
-       <number>15</number>
-      </property>
-      <property name="rightMargin">
-       <number>0</number>
-      </property>
-      <item>
-       <widget class="QLabel" name="labelParallelThreads">
-        <property name="toolTip">
-         <string>If 1, QSpeedTest will ping all the target hosts sequentially.
-
-If &gt;1, QSpeedTest will create and use multiple threads that
-work in parallel, each one pinging a different host from the
-target list.</string>
-        </property>
-        <property name="text">
-         <string>Parallel ping threads</string>
-        </property>
-        <property name="alignment">
-         <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QSpinBox" name="spinBoxParallelThreads">
-        <property name="toolTip">
-         <string>If 1, QSpeedTest will ping all the target hosts sequentially.
-
-If &gt;1, QSpeedTest will create and use multiple threads that
-work in parallel, each one pinging a different host from the
-target list.</string>
-        </property>
-        <property name="minimum">
-         <number>1</number>
-        </property>
-        <property name="maximum">
-         <number>8</number>
-        </property>
-        <property name="value">
-         <number>4</number>
-        </property>
-       </widget>
-      </item>
-     </layout>
-    </item>
-    <item row="1" column="0" colspan="4">
+    <item row="1" column="0" colspan="5">
      <widget class="QSplitter" name="splitter">
       <property name="orientation">
        <enum>Qt::Vertical</enum>
@@ -269,16 +253,12 @@ target list.</string>
       </property>
      </widget>
     </item>
-    <item row="3" column="0">
+    <item row="3" column="0" colspan="2">
      <layout class="QHBoxLayout" name="horizontalLayout_4">
       <item>
        <widget class="QPushButton" name="pushButtonHtmlCode">
         <property name="enabled">
          <bool>false</bool>
-        </property>
-        <property name="toolTip">
-         <string>Copies to the system clipboard a report with the test results in
-HTML format. Passes W3C Markup Validator as XHTML transitional 1.0.</string>
         </property>
         <property name="text">
          <string>HTML</string>
@@ -290,11 +270,6 @@ HTML format. Passes W3C Markup Validator as XHTML transitional 1.0.</string>
         <property name="enabled">
          <bool>false</bool>
         </property>
-        <property name="toolTip">
-         <string>Copies to the system clipboard a report with the test results
-in vBulletin code format, ready to be posted on any vBulletin-
-based forum.</string>
-        </property>
         <property name="text">
          <string>vBulletin</string>
         </property>
@@ -303,9 +278,22 @@ based forum.</string>
      </layout>
     </item>
     <item row="3" column="2" colspan="2">
+     <spacer name="horizontalSpacer_2">
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
+      </property>
+      <property name="sizeHint" stdset="0">
+       <size>
+        <width>308</width>
+        <height>28</height>
+       </size>
+      </property>
+     </spacer>
+    </item>
+    <item row="3" column="4">
      <layout class="QHBoxLayout" name="horizontalLayout">
       <property name="spacing">
-       <number>0</number>
+       <number>12</number>
       </property>
       <item>
        <widget class="QPushButton" name="pushButtonStartStop">
@@ -364,7 +352,7 @@ based forum.</string>
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>750</width>
+     <width>760</width>
      <height>21</height>
     </rect>
    </property>
